# Hadar

./: README.md
Documents/Reversi/: CMakeLists.txt  makefile
Documents/Reversi/etc/: log.txt
Documents/Reversi/exe/: ReversiGame.out  client.out  server.out
Documents/Reversi/lib/googletest-release-1.8.0/googlemock/docs/: CheatSheet.md
Documents/Reversi/lib/googletest-release-1.8.0/googlemock/docs/v1_5/: CookBook.md
Documents/Reversi/lib/googletest-release-1.8.0/googlemock/docs/v1_7/: CheatSheet.md  ForDummies.md
Documents/Reversi/lib/googletest-release-1.8.0/googletest/docs/: V1_6_AdvancedGuide.md  V1_7_Primer.md
Documents/Reversi/src/: .makefile.swp  CMakeLists.txt  test.cpp
Documents/Reversi/src/ReversiGame/: AIPlayer.cpp  CMakeLists.txt  ClientPlayer.cpp
Documents/Reversi/src/client/: .~lock.makefile#  Board.cpp  CMakeLists.txt  Client.cpp  Client.h  ClientPlayer.cpp  ClientPlayer.h  Console.h  Decisions.txt  FlipRule.cpp  Game.cpp  Game.h  Graphic.h  PcPlayer.cpp  PcPlayer.h  PlayerLogic.h  PlayerSign.h  Point.cpp  Point.h  ReversiGame.out  info.txt  main.cpp  makefile
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/docs/: CookBook.md  ForDummies.md  FrequentlyAskedQuestions.md
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/docs/v1_5/: CheatSheet.md  ForDummies.md  FrequentlyAskedQuestions.md
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/docs/v1_6/: CheatSheet.md  CookBook.md  ForDummies.md  FrequentlyAskedQuestions.md
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/docs/v1_7/: CookBook.md  FrequentlyAskedQuestions.md
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/include/gmock/: gmock-generated-actions.h.pump  gmock-generated-function-mockers.h.pump
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/make/: Makefile
Documents/Reversi/src/lib/googletest-release-1.8.0/googlemock/test/: gmock_output_test_golden.txt
Documents/Reversi/src/lib/googletest-release-1.8.0/googletest/docs/: AdvancedGuide.md  FAQ.md  Primer.md  V1_5_AdvancedGuide.md  V1_5_Primer.md  V1_6_FAQ.md  V1_6_Primer.md  V1_7_AdvancedGuide.md  V1_7_FAQ.md  V1_7_XcodeGuide.md
Documents/Reversi/src/lib/googletest-release-1.8.0/googletest/include/gtest/internal/: gtest-param-util-generated.h.pump  gtest-tuple.h.pump
Documents/Reversi/src/lib/googletest-release-1.8.0/googletest/make/: Makefile
Documents/Reversi/src/server/: .cproject  CMakeLists.txt  Command.h  CommandManager.cpp  ConnDet.h  Executer.cpp  Executer.h  GamesManager.h  JoinGame.cpp  JoinGame.h  NameList.cpp  NameList.h  ReversiGame.out  Server.cpp  Server.h  StartGame.cpp  StartGame.h  StringHandler.h  ThreadPool.cpp  ThreadPool.h  main.cpp  makefile  server.out
Documents/Reversi/src/test/: test.cpp
Documents/Reversi/test/: test.cpp
Untitled Folder/src/resources/: settings.txt
Untitled Folder/src/src/: enter.java
Untitled Folder/src/src/board/: Board.java  Point.java
Untitled Folder/src/src/gameLogic/: Game.java  Rule.java
Untitled Folder/src/src/gui/: GUI.java
Untitled Folder/src/src/player/: PlayerLogic.java  PlayerSign.java
etc/: info.txt
ex2/: Board.cpp  Board.h  Game.cpp  Game.h  GameLogic.h  Player.cpp  Player.h  Point.cpp  Point.h  StandardLogic.cpp  StandardLogic.h  a.out  main.cpp  makefile
ex21/: AIPlayer.cpp  AIPlayer.h  Board.cpp  Board.h  BoardSize.h  Client.cpp  Client.h  ClientPlayer.cpp  ClientPlayer.h  Console.cpp  Console.h  FlipRule.cpp  FlipRule.h  Game.cpp  Game.h  Graphic.h  PcPlayer.cpp  PcPlayer.h  PlayerLogic.h  PlayerSign.h  Point.cpp  Point.h  Rule.h  info.txt  main.cpp  makefile  tests
server/: .cproject  CommandManager.cpp  CommandManager.h  ConnDet.h  Executer.cpp  GamesManager.cpp  JoinGame.cpp  JoinGame.h  Server.cpp  Server.h  StartGame.h  StringHandler.cpp  main.cpp
server/Debug/: CommandManager.d  Executer.d  JoinGame.d  Server.d  StartGame.d  main.d  makefile  server  subdir.mk
src/src/gameLogic/: FlipRule.java
src/src/gui/: ImageHandler.java
src/src/player/: PcPlayer.java
